...
                        Text("Оплатить")
                            .font(.headline)
                            .padding()
                        
                    }
                }
                .accessibilityIdentifier("pay")
                .buttonStyle(.borderedProminent)
                .disabled(viewModel.basketIsEmpty(orderService: orderService)
                    || !$orderService.isSynchronized.wrappedValue)
            }
        }
    }
...
